# nRF7002-DK-nfc-function-switching

./: CMakeLists.txt  LICENSE  README.md  prj.conf  sample.yaml
images/: img.drawio
src/: main.c
